# immigrant-student-agent

./: .gitignore  AGENTS.md  README.md  design_idea.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
docs/superpowers/specs/: 2026-06-19-admin-resource-ops-design.md
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
src/app/: globals.css  layout.tsx  page.tsx
src/app/actions/: auth.ts  profile.ts
src/app/backend/: .dockerignore  Dockerfile.lambda  agent.py  firecrawl.py  lambda_handler.py  models.py  prompts.py  pyproject.toml  seed_data.py  server.py  workflow.py
src/app/backend/bank/: __init__.py  models.py  repository.py
src/app/backend/discovery/: __init__.py  __main__.py  batch.py  embed.py  extract.py  schema.py  search.py  vet.py
src/app/backend/serving/: __init__.py  router.py  schema.py  synthesize.py
src/app/backend/tests/: test_decide.py  test_discovery_batch.py  test_repository.py
src/app/backend/verifier/: __init__.py  __main__.py  batch.py  decide.py  extract.py  fetch.py  liveness.py  schema.py  verify.py
src/lib/: link-checker.ts  saved-resources.ts  supabase-admin.ts  supabase-browser.ts  supabase-server.ts  supabase.ts
src/styles/: theme.css
src/theme/: ThemeProvider.tsx
supabase/migrations/: 20241024013800_expand_resources.sql  20241103000000_add_resource_flags.sql  20260205000000_add_link_checks.sql  20260205000001_add_reminder_signups.sql  20260610000000_resource_bank.sql  20260610000001_seed_resource_bank.sql  20260620000000_backfill_directory_to_resource_bank.sql
(+52 files in other folders)
