# src/app/backend/pyproject.toml
[project]
name = "ccny-agent-backend"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "langchain-openai>=0.1.21",
  "pydantic>=2.8.2",
  "python-dotenv>=1.0.1",
  "openai>=1.40.0",
  "asyncpg>=0.29.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.3",
  "pgvector>=0.3.6"
]

[dependency-groups]
dev = [
  "pytest>=8.0.0"
]

[tool.uv]
managed = true

[tool.pytest.ini_options]
pythonpath = ["."]
